--- a/version_01/style.css
+++ b/version_01/style.css
@@ -8,3 +8,12 @@
 body {
   background: #250057;
 }
+
+.input-box{
+  background: #fff;
+  width: 90%;
+  max-width: 500px;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin: 300px auto;
+}
