--- a/version_01/style.css
+++ b/version_01/style.css
@@ -20,3 +20,12 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+.input-box input {
+  width: 100%;
+  padding: 10px;
+  border: 0;
+  outline: 0;
+  font-size: 24px;
+  color: #555;
+}
